# TheGameJamTemplate

./: .agent_config.json  .gitattributes  .gitignore  .itch.toml  .luarc.json  .mcp.json  3d_skew_vertex.vs  AGENTS.md  BATCHED_ENTITY_RENDERING.md  BUILDING_FOR_WEB  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_LOCALITY_PATTERNS.md  DOCUMENTATION_AUDIT_2025-11-20.md  DRAW_COMMAND_BATCH_TESTING_GUIDE.md  DRAW_COMMAND_OPTIMIZATION.md  DeformableChipmunkSnippet.md  Doxyfile  EMOJI_MERGE_TECHNIQUES_ANALYSIS.md  FIRMWARE_AI_HANG_REPORT.md  FIRMWARE_LLM_PROXY_HANG_COMPREHENSIVE.md  GAME_DESIGN_CONTEXT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  JAME_GAM_51.md  Justfile  PIPELINE_CAMERA_FIX_V2.md  PIPELINE_DIAGNOSTICS_ADDED.md  PROJECTILE_ARCHITECTURE_FIX.md  PROJECTILE_SYSTEM_REPORT.md  PROJECTILE_TEST_FIX.md  README.md  SHARED_TASK_NOTES.md  TASK_4_COMBAT_LOOP_REPORT.md  TASK_6.2_COMPLETION_SUMMARY.md  TESTING_CHECKLIST.md  TODO.md  TODO_JAME_GAM_50.md  (+46 more)
.apr/: config.yaml
.beads/: config.yaml  feedback.json  issues.jsonl
.claude/: settings.json  settings.md
.flywheel/: config.env  refine-state.json
.github/: copilot-instructions.md
.ralph-tui/: config.toml  progress.md
.sisyphus/: boulder.json
assets/: Typical_TopDown_example.ldtk  all_uuids.json #auto_generated #verified.json  asset mockups.aseprite  auto_export_assets.aseprite  config.json  ldtk_config.json  test_features.ldtk  test_translation_project.babel
build-release/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  TracyTargets.cmake  cmake_install.cmake
build-tracy/: CPackConfig.cmake  CPackSourceConfig.cmake
cmake/: inject_snippet.cmake  inject_snippet.html  inject_snippet.ps1  run_with_emsdk_env.sh
devlog/: README.md
docs/: CPP_REFACTOR_PLAN.md  CRASH_REPORTING.md  DYNAMIC_TUTORIAL_PLAN.md  IMPLEMENTATION_PLAN_BatchRenderingImprovements.md  LUA_DX_AUDIT_2024.md  MIGRATION_GUIDE.md  PRISM_MIGRATION_PLAN.md  PROFILING_GUIDE.md  README.md  SNKRX_ANALYSIS.md  TROUBLESHOOTING.md  WEB_PROFILING.md  WEB_PROFILING_QUICK_REF.md  WEB_PROFILING_README.md  generate_thumbnail_spec_pdf.py  lua_bindings_implementation_plan.md  projectile_reference.md  quirks.md  task-3.1-findings.md  telemetry_plan.md  thumbnail-art-spec.md
include/: precompiled_headers.hpp
manual_tests/: contact_damage_verification.lua  shop_verification.md  snake_movement_verification.md
need_to_add_to_src_folder/: integrations_needed.md
not_in_use/: new_movable_system.cpp  new_movable_system.hpp  new_text_system.cpp  new_text_system.hpp  text.cpp  text.hpp  text_from_snkrx.lua  text_from_snkrx_scuffed_port.cpp  text_from_snkrx_scuffed_port.hpp
planning/: PLAN.md  (+59 more)
scripts/: KANBAN_SYNC_README.md  append_release.py  aseprite_merge_layers.lua  audit_dungeon_mode_wall_rules.py  bootstrap_dev.ps1  bootstrap_dev.sh  capture-net-worth.sh  check_all.ps1  check_all.py  check_all.sh  check_baseline_size.py  check_fast.sh  check_run_state.py  com.joshuashin.kanban-sync.plist  com.thegamejamtemplate.pixquare-watcher.plist  com.thegamejamtemplate.pixquare-watcher.plist.template  copy_assets.py  doctor.py  e2e_test_scenarios.py  eagle_audio_analyzer.py  export_animations.py  export_tiled_assets.py  extract_components.py  extract_sol2_bindings.py  frequency_scan.py  generate_crusenho_ui_pack.py  generate_docs_skeletons.py  generate_stubs.py  generate_tile_playground.py  generate_tiled_wall_rules_and_demo.py  import_cm_rules.lua  import_cm_rules.py  install-kanban-sync.sh  jsonl-to-markdown.py  link_check_docs.py  net-worth-reminder.sh  pack_test_artifacts.py  process_audio.py  publish_web.ps1  pyproject.toml  (+23 more)
scripts/hooks/: post-checkout
scripts/tests/: README.md  __init__.py  conftest.py  test_check_all.py  test_check_baseline_size.py  test_check_run_state.py  test_doctor.py  test_extract_components.py  test_extract_sol2_bindings.py  test_frequency_scan.py  test_generate_docs_skeletons.py  test_import_cm_rules.py  test_link_check_docs.py  test_pack_test_artifacts.py  test_recount_scope_stats.py  test_sample.py  test_select_tests.py  test_strip_lua_comments.py  test_sync_docs_evidence.py  test_sync_registry_from_manifest.py  test_tiled_asset_inventory.py  test_tiled_wall_rule_coverage.py  test_validate_docs_and_registry.py  test_validate_schemas.py
tests/: CMakeLists.txt  minimal.lua
tests/benchmark/: CMakeLists.txt  benchmark_common.hpp  benchmark_coroutines.cpp  benchmark_ecs.cpp  benchmark_layer.cpp  benchmark_lua_boundary.cpp  benchmark_physics.cpp  benchmark_rendering.cpp
tests/e2e/: test_mode_config_e2e.sh  test_supervisor_crash.sh  test_supervisor_failure.sh  test_supervisor_forensics.sh  test_supervisor_list.sh  test_supervisor_success.sh  test_supervisor_timeout.sh
tests/helpers/: e2e_supervisor_stub.cpp  object_pool_stubs.cpp  test_mode_config_cli.cpp  test_stubs.cpp
tests/mocks/: mock_engine_context.hpp
tests/schemas/: report.sample.json  report.schema.json  run_manifest.sample.json  run_manifest.schema.json  test_api.sample.json  test_api.schema.json
tests/unit/: test_ai_bb_bindings.cpp  test_ai_sense_bindings.cpp  test_animation_playback.cpp  test_api_registry.cpp  test_artifact_store.cpp  test_asset_validation.cpp  test_baseline_manager.cpp  test_batched_local_commands.cpp  test_binding_recorder.cpp  test_blackboard.cpp  test_bulk_component_access.cpp  test_collision_log.cpp  test_color_utils.cpp  test_component_cache.cpp  test_component_cache_validation.lua  test_config_validation.cpp  test_controller_nav.cpp  test_crash_reporter.cpp  test_determinism_audit.cpp  test_determinism_guard.cpp  test_draw_call_counter.cpp  test_e2e_supervisor.cpp  test_engine_context.cpp  test_error_handling.cpp  test_event_bus.cpp  test_event_unification.lua  test_feature_showcase.lua  test_forensics.cpp  test_globals_bridge.cpp  test_globals_caches.cpp  test_goap_utils.cpp  test_harness_lua.cpp  test_input_events.cpp  test_input_state.cpp  test_layer_batching.cpp  test_layer_sorted_flag.cpp  test_layer_state_batching.cpp  test_localization.cpp  test_log_capture.cpp  test_log_harness_lua.cpp  (+45 more)
(+2586 files in other folders)
